# student-pairs

./: Cargo.toml
.github/workflows/: rust.yml
src/: lib.rs  main.rs
