[package]
name = "student_pairs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
polars = { version = "0.33.2", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime", "pivot"] }
rand = "0.8.5"
polars-lazy = "0.33.2"